--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,8 @@
     "bootstrap": "^3.3.6",
     "jquery": "^2.2.2",
     "angular-resource": "^1.5.3",
-    "simpleWeather": "^3.1.0"
+    "simpleWeather": "^3.1.0",
+    "angular-chart.js": "^0.9.0",
+    "Chart.js": "^1.1.0"
   }
 }
