--- a/bower.json
+++ b/bower.json
@@ -38,6 +38,7 @@
     "responsive-menu": "^2.0.0",
     "jquery-responsive-menu": "^0.2.1",
     "pushy": "^1.0.0",
-    "angular-touch": "^1.5.3"
+    "angular-touch": "^1.5.3",
+    "Slidebars": "^0.10.3"
   }
 }
