--- a/bower.json
+++ b/bower.json
@@ -40,6 +40,7 @@
     "pushy": "^1.0.0",
     "angular-touch": "^1.5.3",
     "Slidebars": "^0.10.3",
-    "angular-pageslide-directive": "ng-pageslide#^1.1.1"
+    "angular-pageslide-directive": "ng-pageslide#^1.1.1",
+    "flexslider": "^2.6.0"
   }
 }
