--- a/bower.json
+++ b/bower.json
@@ -42,6 +42,8 @@
     "Slidebars": "^0.10.3",
     "angular-pageslide-directive": "ng-pageslide#^1.1.1",
     "flexslider": "^2.6.0",
-    "bootstrap-select": "^1.10.0"
+    "bootstrap-select": "^1.10.0",
+    "ngToast": "ngtoast#^2.0.0",
+    "angular-animate": "^1.5.5"
   }
 }
