--- a/bower.json
+++ b/bower.json
@@ -46,6 +46,7 @@
     "ngToast": "ngtoast#^2.0.0",
     "angular-animate": "^1.5.5",
     "jquery-mobile": "^1.4.5",
-    "hammerjs": "^2.0.6"
+    "hammerjs": "^2.0.6",
+    "angular-bootstrap": "^1.3.2"
   }
 }
